--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,3 +46,21 @@ ul {
   padding: 10px;
   float: left;
 }
+
+#logo {
+    float: left;
+    font-size: 2.0em;
+    color: #17AA1C;
+    text-transform: uppercase;
+    letter-spacing: -2px;
+    font-weight: bold;
+}
+
+#logo:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
+.center {
+  text-align: center;
+}
