--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="#">Friends</a></li>
-        <li><a href="#">Chat</a></li>
+        <li><a href="#">Messages</a></li>
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
