--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,14 +12,14 @@
   <div class="col-md-3">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="panel-title">User list</h3>
+        <h3 class="panel-title">Friends</h3>
       </div>
       <div class="panel-body">
         <ul>
           <% @users.each do |user| %>
             <div class="panel panel-default">
               <div class="panel-body">
-                <%= link_to user.email, conversations_path(user_id: user), remote: true, method: :post %>
+                <%= link_to user.username, conversations_path(user_id: user), remote: true, method: :post %>
               </div>
             </div>
           <% end %>
